--- a/public/themes/modern/css/layar-monitor-show.css
+++ b/public/themes/modern/css/layar-monitor-show.css
@@ -59,21 +59,16 @@ header {
 	line-height: 30px;
 }
 .box-antrian {
-	flex: 1;
-	text-align:center;
-	text-transform: uppercase;
-	font-size: 18px !important;
-	padding-right: 18px;
-	padding-bottom: 18px;
-	height: 100%;
-	display:flex;
-	flex-direction: column;
-	/* display: flex !important;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column; */
+    flex: 1;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 25px !important;
+    /* font-weight: bold; */
+    padding-right: 18px;
+    padding-bottom: 18px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .box-antrian:first-child {
 	padding-left:0;
@@ -100,10 +95,12 @@ header {
 	border-bottom-right-radius: 10px;
 }
 .box-antrian-body .group-nomor {
-	display: flex;
+    display: flex;
     align-self: center;
     /* margin-top: -20px; */
     padding: 0;
+    font-size: 90px;
+    font-weight: bold;
 }
 .box-antrian-content {
 	/* background: #4e69f0; */
@@ -150,15 +147,17 @@ header {
 }
 
 .box-antrian-header {
-	/* background: #3048be; */
-	/* background: #015fec; */
-	width: 100%;
-	padding: 10px 20px;
-	/* height: 120px; */
-	/* background: #0059de; */
+    font-weight: bold;
+    font-size: 34px;
+    /* background: #3048be; */
+    /* background: #015fec; */
+    width: 100%;
+    padding: 10px 20px;
+    /* height: 120px; */
+    /* background: #0059de; */
     /* border-bottom: 1px solid #0059de; */
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .title {
 	text-align:center;
