--- a/public/themes/modern/css/layar-monitor-show-red.css
+++ b/public/themes/modern/css/layar-monitor-show-red.css
@@ -21,8 +21,8 @@ footer {
 }
 
 .box-antrian-body {
-	background: #f7c9c9;
-    color: #241e36;
+	background: #000;
+	color: #c32c2a;
 }
 
 .box-antrian-header {
