--- a/public/themes/modern/css/layar-antrian-show.css
+++ b/public/themes/modern/css/layar-antrian-show.css
@@ -42,7 +42,7 @@ body{
     text-align: center;
     color: black;
     font-weight: bold;
-    margin: auto 30px;
+    /* margin: auto 30px; */
 }
 .img-antrian-logo{
 
