--- a/public/themes/modern/css/layar-antrian-show.css
+++ b/public/themes/modern/css/layar-antrian-show.css
@@ -45,15 +45,14 @@ body{
     font-weight: bold;
     margin: auto 30px;
 }
-.img-antrian-logo{
-
-        height: 100px;
-        align-items: center;
-        width: 100px;
-        object-fit: cover;
-    
+.img-antrian-logo {
+    height: 100px;
+    align-items: center;
+    width: 100%;
+    object-fit: contain;
 }
 .wrap-antrian {
+    margin: 15px;
     flex-direction: column;
     display: flex;
 }
