--- a/public/themes/modern/css/layar-antrian-show.css
+++ b/public/themes/modern/css/layar-antrian-show.css
@@ -39,11 +39,18 @@ body{
     justify-content: center;
 }
 .name-kategori {
-    font-size: 15px;
+    font-size: 12px;
     text-align: center;
     color: black;
     font-weight: bold;
     /* margin: auto 30px; */
+}
+.card-list-kategori {
+    border: none;
+    width: 200px;
+    border-radius: 20px;
+    height: 200px;
+    padding: 30px 0px;
 }
 .img-antrian-logo {
     height: 100px;
@@ -56,14 +63,12 @@ body{
     flex-direction: column;
     display: flex;
 }
-.card-list-kategori{
-
-        border: none;
-        width: 250px;
-        border-radius: 20px;
-        height: 250px;
-        padding: 30px 0px;
-    
+.card-list-kategori {
+    border: none;
+    width: 200px;
+    border-radius: 20px;
+    height: 200px;
+    padding: 30px 0px;
 }
 .ambil-antrian {
     background-color: white;
